# StatData

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
apps/: statdump.c  test_statdump.c
include/: dump.h  error.h  join.h  sort.h  statdata.h  util.h
src/: dump.c  error.c  join.c  sort.c  util.c
tests/: test_cases.c  test_cases.h  test_utils.c  test_utils.h
